--- a/flutter_umeng_plugin/android/src/main/AndroidManifest.xml
+++ b/flutter_umeng_plugin/android/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.example.flutter_umeng_plugin">
 
+    <!-- 推荐的权限 -->
+    <!-- 添加如下权限，以便使用更多的第三方SDK和更精准的统计数据 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -17,7 +21,23 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
+
     <application>
+
+        <activity android:name="com.example.flutter_umeng_plugin.UmengOtherPushActivity" android:launchMode="singleTask" android:exported="true" />
+        <receiver android:name="com.example.flutter_umeng_plugin.MeizuTestReceiver">
+            <intent-filter>
+                <action android:name="com.meizu.flyme.push.intent.MESSAGE" />
+                <action android:name="com.meizu.flyme.push.intent.REGISTER.FEEDBACK" />
+                <action android:name="com.meizu.flyme.push.intent.UNREGISTER.FEEDBACK" />
+                <action android:name="com.meizu.c2dm.intent.REGISTRATION" />
+                <action android:name="com.meizu.c2dm.intent.RECEIVE" />
+                <!-- example程序包名字-->
+                <category android:name="com.example.flutter_umeng_plugin"></category>
+            </intent-filter>
+        </receiver>
+
+
         <!--新浪-->
         <activity
             android:name="com.umeng.socialize.media.WBShareCallBackActivity"
